isolating AttackPhase almost done, but Timer won't start